tests/fail/assign.tox
fn main() {
    let foo = true;
    foo(); //error: `foo` is not callable
}
